--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <div id="wrapper">
-    <h1>Note Scrapper</h1>
+    <h1>Racing News Scrapper</h1>
     <div id="articles"></div>
     <div id="notes"></div>
   </div>
@@ -21,6 +21,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.13.0/umd/popper.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
+  <script src="app.js"></script>
 </body>
 
 </html>
